--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Your Task",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/NKC27/Social-Network-API/issues"
   },
-  "homepage": "https://github.com/NKC27/Social-Network-API#readme"
+  "homepage": "https://github.com/NKC27/Social-Network-API#readme",
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.2",
+    "nodemon": "^2.0.16"
+  }
 }
